# spotify_data

./: .gitignore  README.md  app.py  confusion_matrix.csv  pyproject.toml  spotify_data.ipynb  spotify_training.ipynb  spotify_webpage.py  test.py
local_models/model_dont_miss_hits/: MLmodel  model.pkl  serving_input_example.json
local_models/model_dont_overestimate/: MLmodel  conda.yaml  input_example.json  python_env.yaml
plots/with_artists/: confusion_matrix.csv  confusion_matrix_dont_overestimate.csv
plots/without_artists_do/: confusion_matrix.csv
